<resources>
    <string name="app_name" translatable="false">Events Reminder</string>

    <!--NewEventActivity-->
    <string name="year_checkbox">Don\'t remember the year?</string>
    <string name="title_activity_new_person">NewPersonActivity</string>
    <string name="bt_ok">OK</string>
    <string name="bt_cancel">Cancel</string>
    <string name="hint_name">Enter the name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>
    <string name="hint_date">Choose a date</string>
    <string name="hint_event_name">Event name</string>
    <string name="hint_from_contacts">Add from contacts</string>
    <string name="error_name">Please enter a name</string>
    <string name="error_date">Please enter a date</string>
    <string name="error_event_name">Please enter event name</string>

    <!--Settings keys-->
    <string name="key_contacts_import" translatable="false">contacts_import</string>
    <string name="key_notification_time" translatable="false">notification_time</string>
    <string name="key_export_sdcard" translatable="false">export_sdcard</string>
    <string name="key_import_sdcard" translatable="false">import_data</string>
    <string name="key_switch_mode" translatable="false">switch_mode</string>
    <string name="key_version" translatable="false">version</string>
    <string name="key_contact_me" translatable="false">contact_me</string>
    <string name="key_additional_notification">key_additional_notification</string>
    <string name="key_privacy_policy">key_privacy_policy</string>

    <!--SettingsActivity-->
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="import_contacts">Import from contact book</string>
    <string name="import_contacts_summary">Import contacts from your device</string>
    <string name="export_data">Export data to SD Card</string>
    <string name="export_data_summary">Save XML file with backup</string>
    <string name="import_data">Import data from SD Card</string>
    <string name="import_data_summary">Recover data from XML file</string>
    <string name="night_mode">Night mode</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="version">Version</string>
    <string name="contact_me">Contact me</string>
    <string name="contact_me_summary">Tap here to send me email</string>
    <string name="about">About</string>
    <string name="general">General</string>
    <string name="backup_and_synchronization">Backup and synchronization</string>
    <string name="additional_notification">Additional notification</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_policy_link" translatable="false">
        https://cdn.rawgit.com/PlanesWalkerr/Reminder/84768608/privacy_policy.html</string>

    <string name="entry_never">Never</string>
    <string name="entry_1_day">1 day before</string>
    <string name="entry_2_days">2 days before</string>
    <string name="entry_3_days">3 days before</string>
    <string name="entry_1_week">1 week before</string>

    <string-array name="additional_notification_entries">
        <item>@string/entry_never</item>
        <item>@string/entry_1_day</item>
        <item>@string/entry_2_days</item>
        <item>@string/entry_3_days</item>
        <item>@string/entry_1_week</item>
    </string-array>

    <string-array name="additional_notification_alias">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>7</item>
    </string-array>


    <!--Notifications-->
    <string name="channel_name" translatable="false">Reminder</string>
    <string name="today_is">Today is\u0020</string>

    <!--Menu-->
    <string name="action_show_settings">Show settings</string>
    <string name="action_delete_event">Delete event</string>
    <string name="action_add_event">Add event</string>
    <string name="delete_menu">Delete</string>
    <string name="edit_menu">Edit</string>

    <!--EventDetailActivity-->
    <string name="today">Today</string>
    <string name="description_season_image">season image</string>
    <string name="description_event_icon">event icon</string>
    <string name="description_contact_icon">contact icon</string>
    <string name="description_person_icon">person icon</string>
    <string name="description_phone_icon">phone icon</string>
    <string name="description_calendar_icon">calendar icon</string>
    <string name="description_days_left_icon">days left icon</string>
    <string name="description_zodiac_image">zodiac image</string>
    <string name="description_call_button">call button</string>
    <string name="description_message_button">message button</string>
    <string name="detail_phone_number">Phone number</string>
    <string name="detail_zodiac">Sign of zodiac</string>
    <string name="detail_days_left">Days left</string>
    <string name="notification_time">Set notification time</string>

    <!--Months-->
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string-array name="months">
        <item>@string/january</item>
        <item>@string/february</item>
        <item>@string/march</item>
        <item>@string/april</item>
        <item>@string/may</item>
        <item>@string/june</item>
        <item>@string/july</item>
        <item>@string/august</item>
        <item>@string/september</item>
        <item>@string/october</item>
        <item>@string/november</item>
        <item>@string/december</item>
    </string-array>

    <!--Event types-->
    <string name="type_birthday">birthday</string>
    <string name="type_anniversary">anniversary</string>
    <string name="type_other_event">other event</string>

    <string-array name="types">
        <item>@string/type_birthday</item>
        <item>@string/type_anniversary</item>
        <item>@string/type_other_event</item>
    </string-array>

    <!--messages-->
    <string name="msg_deleted">Deleted</string>
    <string name="msg_loading_contacts">Loading contacts</string>
    <string name="confirm_dlg_title">Confirm deleting</string>
    <string name="confirm_dlg_msg">Do you really want to delete this event?</string>

    <!--Signs of zodiac-->
    <string name="zodiac_aquarius">Aquarius</string>
    <string name="zodiac_aries">Aries</string>
    <string name="zodiac_cancer">Cancer</string>
    <string name="zodiac_capricorn">Capricorn</string>
    <string name="zodiac_gemini">Gemini</string>
    <string name="zodiac_leo">Leo</string>
    <string name="zodiac_libra">Libra</string>
    <string name="zodiac_pisces">Pisces</string>
    <string name="zodiac_sagittarius">Sagittarius</string>
    <string name="zodiac_scorpio">Scorpio</string>
    <string name="zodiac_taurus">Taurus</string>
    <string name="zodiac_virgo">Virgo</string>

    <!-- backup-->
    <string name="exporting_message">Exporting records</string>
    <string name="storage_unavailable">Storage unavailable</string>
    <string name="backup_finished">Backup successfully finished! XML-file is located at %1$s</string>
    <string name="records_recovered">Records recovered!</string>
    <string name="failed_to_recover">Failed to recover records</string>

    <!--Permissions-->
    <string name="read_contacts_permission_not_granted">Permission to read contacts was not granted</string>
    <string name="read_sdcard_permission_not_granted">Permission to read SD card was not granted</string>
    <string name="write_sdcard_permission_not_granted">Permission to write SD card was not granted</string>

</resources>
