<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:key="preference_screen">
    <Preference
        android:key="@string/key_contacts_import"
        android:title="@string/import_contacts" />

    <com.makhovyk.mykhailo.reminder.utils.TimePreference
        android:key="@string/key_notification_time"
        android:title="@string/notification_time" />

    <Preference
        android:key="@string/key_export_sdcard"
        android:title="@string/export_data" />

    <Preference
        android:key="@string/key_import_sdcard"
        android:title="@string/import_data" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/key_switch_mode"
        android:title="@string/night_mode" />


</PreferenceScreen>