<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:orientation="vertical"
    android:padding="15dp">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/sp_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

            <LinearLayout
                android:id="@+id/ll_event_name"
                style="@style/horizontalLinearLayoutStyle"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/iv_event_icon"
                    style="@style/imageViewStyle"
                    android:contentDescription="@string/description_event_icon"
                    android:src="@drawable/ic_cake_black_24dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/il_event_name"
                    style="@style/textInputLayoutStyle">

                    <EditText
                        android:id="@+id/et_event_name"
                        style="@style/editTextStyle"
                        android:hint="@string/hint_event_name"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <LinearLayout style="@style/horizontalLinearLayoutStyle">

                <ImageView
                    android:id="@+id/iv_person_icon"
                    style="@style/imageViewStyle"
                    android:contentDescription="@string/description_person_icon"
                    android:src="@drawable/ic_person_icon_black" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/il_name"
                    style="@style/textInputLayoutStyle">


                    <EditText
                        android:id="@+id/et_name"
                        style="@style/editTextStyle"
                        android:hint="@string/hint_name"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout style="@style/horizontalLinearLayoutStyle">

                <ImageView
                    android:id="@+id/iv_phone_icon"
                    style="@style/imageViewStyle"
                    android:contentDescription="@string/description_phone_icon"
                    android:src="@drawable/ic_phone_black" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/il_phone"
                    style="@style/textInputLayoutStyle">

                    <EditText
                        android:id="@+id/et_phone"
                        style="@style/editTextStyle"
                        android:hint="@string/hint_phone"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout style="@style/horizontalLinearLayoutStyle">

                <ImageView
                    android:id="@+id/iv_calendar_icon"
                    style="@style/imageViewStyle"
                    android:contentDescription="@string/description_calendar_icon"
                    android:src="@drawable/ic_calendar_black" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/il_date"
                    style="@style/textInputLayoutStyle">

                    <EditText
                        android:id="@+id/et_date"
                        style="@style/editTextStyle"
                        android:clickable="true"
                        android:focusable="false"
                        android:hint="@string/hint_date"
                        android:inputType="none"
                        android:longClickable="false"
                        tools:ignore="TextFields" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <CheckedTextView
                android:id="@+id/ctv_hide_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:text="@string/year_checkbox"
                android:textColor="?attr/primaryTextColor" />

            <Button
                android:id="@+id/bt_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/bt_ok"
                android:textColor="#fff"
                android:textStyle="bold" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>