<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_season"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_season_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/description_season_image"
                android:gravity="bottom"
                android:paddingBottom="20dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_main_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_weight="0.4"
            android:background="?attr/detailBackgroundColor"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_main_info"
                app:backgroundColor="?attr/cardViewBackgroundColor"
                style="@style/cardViewStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:layout_marginBottom="15dp"
                        android:weightSum="6">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/tv_age"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:textAlignment="center"
                                android:textColor="?attr/iconColor"
                                android:textSize="@dimen/text__size_18_sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:layout_weight="5"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_event_date"
                                style="@style/Primary.TextView" />

                            <TextView
                                android:id="@+id/tv_event_type"
                                style="@style/Secondary.TextView" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:layout_marginBottom="15dp"
                        android:weightSum="6">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/iv_days_image"
                                android:src="@drawable/ic_calendar_black"
                                style="@style/detailIconStyle"
                                android:contentDescription="@string/description_days_left_icon" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:layout_weight="5"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_days_left"
                                style="@style/Primary.TextView" />

                            <TextView
                                android:id="@+id/tv_days_left_description"
                                style="@style/Secondary.TextView"
                                android:text="@string/detail_days_left" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:layout_marginBottom="15dp"
                        android:weightSum="6">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/iv_zodiac_image"
                                style="@style/detailIconStyle"
                                android:contentDescription="@string/description_zodiac_image" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:layout_weight="5"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_zodiac"
                                style="@style/Primary.TextView" />

                            <TextView
                                android:id="@+id/tv_zodiac_description"
                                style="@style/Secondary.TextView"
                                android:text="@string/detail_zodiac" />

                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cv_phone"
                android:layout_marginTop="10dp"
                style="@style/cardViewStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:orientation="horizontal"
                    android:weightSum="6">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageButton
                            android:id="@+id/ibt_call"
                            android:background="?android:attr/selectableItemBackground"
                            android:src="@drawable/ic_call_black_24dp"
                            style="@style/detailIconStyle"
                            android:contentDescription="@string/description_call_button" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_phone"
                            style="@style/Primary.TextView" />

                        <TextView
                            android:id="@+id/tv_phone_description"
                            style="@style/Secondary.TextView"
                            android:text="@string/detail_phone_number" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageButton
                            android:id="@+id/ibt_message"
                            android:background="?android:attr/selectableItemBackground"
                            android:src="@drawable/ic_message_black_24dp"
                            style="@style/detailIconStyle"
                            android:contentDescription="@string/description_message_button" />

                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_edit_black_24dp"
        app:backgroundTint="@color/cyanDark"
        app:layout_anchor="@id/ll_season"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>